--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.abiral.rai.list",
+  "name": "com.susil.toDoList",
   "displayName": "toDoList",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
